--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="bilibili ASS Danmaku Downloader，以 ASS 格式下载 bilibili 的弹幕" />
   <link type="text/css" rel="styleSheet"  href="index.css" />
   <script> var GM_xmlhttpRequest = GM_addStyle = function () { }; </script>
-  <script src="bilibili_ASS_Danmaku_Downloader.user.js"></script>
+  <script src="main.js"></script>
   <script> var fetchXML = getCid = mina = showButton = initButton = init = function () { }; </script>
   <script src="common.js"></script>
 </head>
