--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         兼容 libass 和 VSFilter 的 ASS 格式解析器<br />
       </div>
       <div id="side-buttons">
-        <label title="上传下载好的 XML 文件在线转换"><span id="convert">在线转换</span><input id="upload" style="display:none" type="file" /></label>
+        <label title="上传下载好的 JSON 文件在线转换"><span id="convert">上传chat.json</span><input id="upload" style="display:none" type="file" /></label>
       </div>
     </header>
 
@@ -31,7 +31,7 @@
       <div class="p"><a href="https://github.com/Liu-Junyan/youtube-livechat-to-danmaku/blob/main/README.md">README.md</a></div>
     </div>
 
-    <h3>鸣谢</h3>
+    <h3>关于</h3>
     <div class="in">
       <div class="p">本项目基于<a href="https://github.com/tiansh/us-danmaku">tiansh/us-danmaku</a>。</div>
     </div>
