--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         兼容 libass 和 VSFilter 的 ASS 格式解析器<br />
       </div>
       <div id="side-buttons">
-        <label title="上传下载好的 JSON 文件在线转换"><span id="convert">上传chat.json</span><input id="upload" style="display:none" type="file" /></label>
+        <label title="上传下载好的 JSON 文件在线转换"><span id="convert">上传JSON文件</span><input id="upload" style="display:none" type="file" /></label>
       </div>
     </header>
 
