--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <title>YouTube ASS 弹幕在线转换</title>
-  <meta name="keywords" content="bilibili, 哔哩哔哩, 弹幕, danmaku, 下载" />
-  <meta name="description" content="bilibili ASS Danmaku Downloader，以 ASS 格式下载 bilibili 的弹幕" />
+  <meta name="keywords" content="YouTube, 油管, 弹幕, danmaku, 下载" />
+  <meta name="description" content="YouTube ASS Danmaku Downloader，以 ASS 格式下载 YouTube 的弹幕" />
   <link type="text/css" rel="styleSheet"  href="index.css" />
   <script> var GM_xmlhttpRequest = GM_addStyle = function () { }; </script>
   <script src="main.js"></script>
-  <script> var fetchXML = getCid = mina = showButton = initButton = init = function () { }; </script>
+  <!-- <script> var fetchXML = getCid = mina = showButton = initButton = init = function () { }; </script> -->
   <script src="common.js"></script>
 </head>
 <body>
